Fix lists not showing in safari.

--- a/parkhang/frontend/app/components/TextDetail/PechaText.css
+++ b/parkhang/frontend/app/components/TextDetail/PechaText.css
@@ -2,6 +2,7 @@
     height: 100%;
     width: 100%;
     background-color: white;
+    flex-grow: 1;
 }
 
 .textPagesRow {
