--- a/parkhang/frontend/app/components/TextList/TextList.css
+++ b/parkhang/frontend/app/components/TextList/TextList.css
@@ -5,6 +5,7 @@
     height: 100%;
     width: 300px;
     background-color: white;
+    flex-grow: 1;
 }
 
 .textList *:focus {
